package com.product.catalog.entity;

public enum CatalogVersion {
    STAGED,
    ONLINE
}
